# Learn-Ros

./: README.md
01_wait_forever/: Cargo.toml
02_runtime_init/: .gitignore  Makefile  README.207.md
02_runtime_init/src/: bsp.rs  main.rs  panic_wait.rs
02_runtime_init/src/_arch/aarch64/cpu/: boot.s
02_runtime_init/src/bsp/: raspberrypi.rs
03_hacky_hello_world/: README.md
03_hacky_hello_world/src/: main.rs  print.rs
03_hacky_hello_world/src/_arch/aarch64/cpu/: boot.rs
03_hacky_hello_world/src/bsp/raspberrypi/: kernel.ld
04_safe_globals/: .gitignore  Cargo.toml  Makefile  README.207.md  README.CN.md  README.md
04_safe_globals/src/: console.rs  cpu.rs  main.rs  panic_wait.rs  print.rs
04_safe_globals/src/_arch/aarch64/: cpu.rs
04_safe_globals/src/_arch/aarch64/cpu/: boot.s
04_safe_globals/src/bsp/: raspberrypi.rs
04_safe_globals/src/bsp/raspberrypi/: console.rs
