[package]
name = "R-207"
version = "0.2.0"
authors = ["207 <wayne.xie207@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# lto: 启用链接时优化（Link Time Optimization）。
[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"


[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
some_crate = "0.2.1"
# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu ={ version = "10.0.0" }